test/sema/composite-type-redefinition.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

struct Foo: Copyable { }

// CHECK: [[@LINE+4]]:8: error: redefinition of 'Foo'
// CHECK: :3:8: note: previous definition here
// CHECK: [[@LINE+2]]:8: error: redefinition of 'Foo.init'
// CHECK: :3:8: note: previous definition here
struct Foo { } // TODO: Don't show redefinition error for autogenerated constructor.
